fixed spacing for project containers on desktop

--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -30,5 +30,7 @@ $desktop_width: 1000px;
     border-right: 3px solid $text;
     display: block;
     width: 10em;
+  .project_container {
+    margin: 1em 2em;
   }
 }
